minor overflow bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,5 @@
   height: 100vh;
   max-width: 100vw;
   background-color: #0d1117;
+  overflow: auto;
 }
